--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
 <html>
+<head>
 <meta http-equiv="refresh" content="0; url=https://jeremypbeard.github.io.home" />
+</head>
 </html>
