Page names added

--- a/home.html
+++ b/home.html
@@ -6,6 +6,7 @@
   	<link rel="stylesheet" href="website-styles.css">
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Home - Jeremy Beard's Webpage</title>
 </head>
 
 <body onload="add_navbar_and_photo_column()">
