Talks updated with WAECO link and dead links removed

--- a/home.html
+++ b/home.html
@@ -26,10 +26,12 @@
 		    <div class="col-sm-9 offset-sm-3">
 
 		  		<div class="p-5">
-			  			<h1>About me</h1>
+		  			<h1>Home</h1>
+			  			<h3>About me</h3>
 			  			<p class="pt-2 px-0">
 			  				I am a fourth year Mathematics PhD candidate at Carnegie Mellon University, advised by Rami Grossberg. My research is in logic, specifically model theory, with a focus on abstract elementary classes.
 			  			</p>
+			  			<h3>Recent news</h3>
 			  			<p>
 			  				I have an upcoming paper with Marcos Mazari-Armida, <i>On the spectrum of limit models</i>. The PDF and arXiv links will be added soon.
 			  			</p>
