--- a/talks.html
+++ b/talks.html
@@ -58,7 +58,7 @@
 			  			<div class="p-2">
 			  				<li>
 			  					<h4><i>An introduction to abstract elementary classes</i>, 25<sup>th</sup> June 2024</h4>
-			  					<p>2 lectures at the 2024 'WAECO' AEC conference, with a proof of Shelah's presentation theorem. Based on Rami Grossberg's Model Theory 2 course.</p>
+			  					<p>2 lectures at the 2024 <a href="https://math.artsandsciences.baylor.edu/conferences/waeco-workshop">'WAECO' AEC conference</a>, with a proof of Shelah's presentation theorem. Based on Rami Grossberg's Model Theory 2 course.</p>
 			  					<ul>
 			  						<li><a href="./talks/waeco-talk-part-1.pdf">Part 1 Handwritten notes</a></li>
 			  						<li><a href="./talks/waeco-talk-part-2.pdf">Part 2 Handwritten notes</a></li>
@@ -79,7 +79,7 @@
 			  					<h4><i>Forking in superstable AECs</i>, 29<sup>th</sup> Feb 2024</h4>
 			  					<p>A lecture in the CMU Model Theory Seminar on the properties of &lambda;-forking in &lambda;-superstable AECs, including canonicity. Based on chapters 13 and 14 of Sebastien Vasey's AEC lecture notes.</p>
 			  					<ul>
-			  						<li><a href="./talks/gsps-categoricity-theorems.pdf">Handwritten notes</a></li>
+			  						<li>Notes not available</li>
 			  					</ul>
 			  				</li>
 			  			</div>
@@ -97,7 +97,7 @@
 			  					<h4><i>Logic with the quantifier 'there exist uncountably many'</i>, 7<sup>th</sup> April 2023</h4>
 			  					<p>A lecture in the CMU Graduate Set Theory and Model Theory Seminar. Based on the paper with same name by Jerome Keisler.</p>
 			  					<ul>
-			  						<li><a href="./talks/gstmts-keisler-lq.pdf">Handwritten notes</a></li>
+			  						<li>Notes not available</li>
 			  					</ul>
 			  				</li>
 			  			</div>
