--- a/teaching.html
+++ b/teaching.html
@@ -25,7 +25,7 @@
 
 		  		<div class="container p-5">
 		  			<h1>Teaching</h1>
-					<p class="container">During my time at Carnegie Mellon, I was the 2024 recipient of the graduate <a href="https://www.cmu.edu/math/grad/phd/graduate-student-prizes.html">Outstanding Teaching Prize</a>. I have been a teaching assistant for the following courses:</p>
+					<p class="container">During my time at Carnegie Mellon, I was the 2024 recipient of the Mathematical Sciences department's graduate <a href="https://www.cmu.edu/math/grad/phd/graduate-student-prizes.html">Outstanding Teaching Prize</a>. I have been a teaching assistant for the following courses:</p>
 		  			<ul>
 		  				<li>
 			  				<b>Spring 2025</b> 
