added on the spectrum of limit models paper pdf and arxiv links

--- a/home.html
+++ b/home.html
@@ -33,7 +33,7 @@
 			  			</p>
 			  			<h3>Recent news</h3>
 			  			<p>
-			  				I have an upcoming paper with Marcos Mazari-Armida, <i>On the spectrum of limit models</i>. The PDF and arXiv links will be added soon.
+			  				I have an upcoming paper with Marcos Mazari-Armida, <i>On the spectrum of limit models</i> <a href="./publications/on-the-spectrum-of-limit-models.pdf">PDF</a> <a href="https://arxiv.org/abs/2503.11605">arXiv</a>.
 			  			</p>
 			  			<p>
 			  				For more information on my work and about me, please have a look around!
