--- a/publications.html
+++ b/publications.html
@@ -30,8 +30,8 @@
 		  				<li>
 		  					<h5>Jeremy Beard and Marcos Mazari-Armida, <i>On the spectrum of limit models</i></h5>
 		  					<ul>
-		  						<li>PDF coming soon</li>
-		  						<li>arXiv coming soon</li>
+		  						<li><a href="./publications/on-the-spectrum-of-limit-models.pdf">PDF</a></li>
+		  						<li><a href="https://arxiv.org/abs/2503.11605">arXiv</a></li>
 		  					</ul>
 		  				</li>
 
