works with mobile now

--- a/cv.html
+++ b/cv.html
@@ -11,7 +11,7 @@
 
 <body onload="add_navbar_and_photo_column()">
 
-<script id="website-script" src="website-script.js"></script>
+	<script id="website-script" src="website-script.js"></script>
 	<div id="theme" class="container-fluid" data-bs-theme="purple">
 
 		<div class="row" id="navbar-row">
@@ -19,14 +19,14 @@
 		</div>
 
 		<div class="row" id="main">
-		    <div class="col-sm-3 affix" id="photo-column" ></div>
+		    <div class="col-sm-3" id="photo-column" ></div>
 
-		    <div class="col-sm-9 offset-sm-3">
+		    <div class="col-sm-9">
 
-		  		<div class="container p-5">
+		  		<div class="p-5">
 		  			<h1>CV</h1>
-					<h2>Education</h2>
-		  			<ul class="container">
+					<h2 class="px-3">Education</h2>
+		  			<ul class="container px-5">
 						<li>
 			  				<h4>Carnegie Mellon University</h4>
 			  				<ul>
@@ -48,8 +48,8 @@
 			  				</p>
 		  				</li>
 					</ul>
-			  		<h2>Work</h2>
-		  			<ul class="container">
+			  		<h2 class="px-3">Work</h2>
+		  			<ul class="container px-5">
 						<li>
 			  				<h4>e2E SATCOM</h4>
 		  					<p>
