--- a/home.html
+++ b/home.html
@@ -13,29 +13,27 @@
 
 	<script id="website-script" src="website-script.js"></script>
 	<div id="theme" class="container-fluid" data-bs-theme="purple">
-	<! to be removed>
-		<div class="row" id="navbar-row">
-			
-		</div>
+	
+		<div class="row" id="navbar-row"></div>
 
 		<div class="row" id="main">
-		    <div class="col-sm-3 affix" id="photo-column" >
+		    <div class="col-sm-3" id="photo-column" >
 		  		
 		    </div>
 
-		    <div class="col-sm-9 offset-sm-3">
+		    <div class="col-sm-9">
 
 		  		<div class="p-5">
 		  			<h1>Home</h1>
-			  			<h3>About me</h3>
-			  			<p class="pt-2 px-0">
+			  			<h3 class="px-3">About me</h3>
+			  			<p class="pt-2 px-5">
 			  				I am a fourth year Mathematics PhD candidate at Carnegie Mellon University, advised by Rami Grossberg. My research is in logic, specifically model theory, with a focus on abstract elementary classes.
 			  			</p>
-			  			<h3>Recent news</h3>
-			  			<p>
+			  			<h3 class="px-3">Recent news</h3>
+			  			<p class="pt-2 px-5">
 			  				I have an upcoming paper with Marcos Mazari-Armida, <i>On the spectrum of limit models</i> <a href="./publications/on-the-spectrum-of-limit-models.pdf">PDF</a> <a href="https://arxiv.org/abs/2503.11605">arXiv</a>.
 			  			</p>
-			  			<p>
+			  			<p class="pt-5">
 			  				For more information on my work and about me, please have a look around!
 			  			</p>
 		  		</div>
