--- a/publications.html
+++ b/publications.html
@@ -14,19 +14,17 @@
 	<script id="website-script" src="website-script.js"></script>
 	<div id="theme" class="container-fluid" data-bs-theme="purple">
 
-		<div class="row" id="navbar-row">
-			
-		</div>
+		<div class="row" id="navbar-row"></div>
 
 		<div class="row" id="main">
-		    <div class="col-sm-3 affix" id="photo-column" ></div>
+		    <div class="col-sm-3" id="photo-column" ></div>
 
-		    <div class="col-sm-9 offset-sm-3">
+		    <div class="col-sm-9">
 
 		  		<div class="container p-5">
 		  			<h1>Publications</h1>
-		  			<h3>Upcoming</h3>
-		  			<ul>
+		  			<h3 class="px-3">Upcoming</h3>
+		  			<ul class="px-5">
 		  				<li>
 		  					<h5>Jeremy Beard and Marcos Mazari-Armida, <i>On the spectrum of limit models</i></h5>
 		  					<ul>
