--- a/talks.html
+++ b/talks.html
@@ -14,16 +14,14 @@
 	<script id="website-script" src="website-script.js"></script>
 	<div id="theme" class="container-fluid" data-bs-theme="purple">
 
-		<div class="row" id="navbar-row">
-			
-		</div>
+		<div class="row" id="navbar-row"></div>
 
 		<div class="row" id="main">
-		    <div class="col-sm-3 affix" id="photo-column">
+		    <div class="col-sm-3" id="photo-column">
 		  		
 		    </div>
 		    
-		    <div class="col-sm-9 offset-sm-3 max-vh-100 overflow-auto">
+		    <div class="col-sm-9 max-vh-100 overflow-auto"">
 
 		  		<div class="p-5">
 			  		<h1>Talks</h1>
