--- a/teaching.html
+++ b/teaching.html
@@ -14,14 +14,12 @@
 <script id="website-script" src="website-script.js"></script>
 	<div id="theme" class="container-fluid" data-bs-theme="purple">
 
-		<div class="row" id="navbar-row">
-			
-		</div>
+		<div class="row" id="navbar-row"></div>
 
 		<div class="row" id="main">
-		    <div class="col-sm-3 affix" id="photo-column" ></div>
+		    <div class="col-sm-3" id="photo-column" ></div>
 
-		    <div class="col-sm-9 offset-sm-3">
+		    <div class="col-sm-9">
 
 		  		<div class="container p-5">
 		  			<h1>Teaching</h1>
