first on new laptop, plus added limit model talk notes and arml model theory talks

--- a/talks.html
+++ b/talks.html
@@ -25,6 +25,7 @@
 
 		  		<div class="p-5">
 			  		<h1>Talks</h1>
+			  		Below is a list of academic talks I have given. Talks aimed primarily at undergraduate or pre-university students are listed in <a href="./teaching.html">Teaching</a>.
 		  			<ul>
 		  				<div class="p-2">
 			  				<li>
@@ -47,9 +48,9 @@
 		  				<div class="p-2">
 			  				<li>
 			  					<h4><i>On the spectrum of limit models</i>, 17<sup>th</sup> Oct - 14<sup>th</sup> Nov 2024</h4>
-			  					<p>4 lectures in the CMU Model Theory Seminar. Based on the paper with same name, joint work with Marcos Mazari-Armida.</p>
+			  					<p>4 lectures in the CMU Model Theory Seminar. Based on an early version of the paper with same name, joint work with Marcos Mazari-Armida (see publications).</p>
 			  					<ul>
-			  						<li>Handwritten notes to be added</li>
+			  						<li><a href="./talks/on-the-spectrum-of-limit-models-cmu-seminar-notes.pdf">Handwritten notes</a></li>
 			  					</ul>
 			  				</li>
 			  			</div>
