--- a/teaching.html
+++ b/teaching.html
@@ -58,7 +58,11 @@
 			  				<p>TA for <i>Calculus in Three Dimensions</i> (21-259)</p>
 			  			</li>
 			  		</ul>
-			  				
+			  		Through the Western PA branch of ARML (based at CMU), I've also done some voluntary teaching for middle and high school students. These were 'one-off' talks letting students dip their toes into some deep areas of mathematics.
+			  		<ul>
+			  			<li>Intro to model theory (<a href="./teaching/arml-model-theory-lecture.pdf">handout PDF</a>)</li>
+			  			<li>Vector spaces and matrices</li>
+			  		</ul>	
 		  		</div>
 		  	</div>
 	    </div>
