NEMTD slides added

--- a/talks.html
+++ b/talks.html
@@ -21,12 +21,30 @@
 		  		
 		    </div>
 		    
-		    <div class="col-sm-9 max-vh-100 overflow-auto"">
+		    <div class="col-sm-9 max-vh-100 overflow-auto">
 
 		  		<div class="p-5">
 			  		<h1>Talks</h1>
 			  		Below is a list of academic talks I have given. Talks aimed primarily at undergraduate or pre-university students are listed in <a href="./teaching.html">Teaching</a>.
 		  			<ul>
+		  				<div class="p-2">
+			  				<li>
+			  					<h4><i>On the spectrum of limit models</i>, 5th<sup>th</sup> April 2025</h4>
+			  					<p>Part of the 2025 <a href="https://nemtd.wescreates.wesleyan.edu/index.html">Northeast Model Theory Day</a>. A brief 10 minute overview of <a href="./publications/on-the-spectrum-of-limit-models.pdf">the paper of the same name</a> (joint work with Marcos Mazari-Armida).</p>
+			  					<ul>
+			  						<li><a href="./talks/on_the_spectrum_of_limit_models_talk_NEMTD.pdf">Slides</a></li>
+			  					</ul>
+			  				</li>
+			  			</div>
+		  				<div class="p-2">
+			  				<li>
+			  					<h4><i>On the spectrum of limit models</i>, 25<sup>th</sup> March 2025</h4>
+			  					<p>A somewhat informal lecture in the CMU Graduate Set Theory and Model Theory Seminar, discussing results and sketching some proofs from <a href="./publications/on-the-spectrum-of-limit-models.pdf">the paper of the same name</a> (joint work with Marcos Mazari-Armida).</p>
+			  					<ul>
+			  						<li><a href="./talks/gstmts-on-the-spectrum-of-limit-models.pdf">Handwritten notes</a></li>
+			  					</ul>
+			  				</li>
+			  			</div>
 		  				<div class="p-2">
 			  				<li>
 			  					<h4><i>The many faces of superstability</i>, 18<sup>th</sup> Feb 2025</h4>
