updated after Vienna conference and changes to BeMa

--- a/home.html
+++ b/home.html
@@ -27,12 +27,17 @@
 		  			<h1>Home</h1>
 			  			<h3 class="px-3">About me</h3>
 			  			<p class="pt-2 px-5">
-			  				I am a fourth year Mathematics PhD candidate at Carnegie Mellon University, advised by Rami Grossberg. My research is in logic, specifically model theory, with a focus on abstract elementary classes.
+			  				I am a fifth year Mathematics PhD candidate at Carnegie Mellon University, advised by Rami Grossberg. My research is in logic, specifically model theory, with a focus on abstract elementary classes.
 			  			</p>
 			  			<h3 class="px-3">Recent news</h3>
-			  			<p class="pt-2 px-5">
-			  				I have an upcoming paper with Marcos Mazari-Armida, <i>On the spectrum of limit models</i> <a href="./publications/on-the-spectrum-of-limit-models.pdf">PDF</a> <a href="https://arxiv.org/abs/2503.11605">arXiv</a>.
-			  			</p>
+			  			<ul class="pt-2 px-5">
+				  			<li>
+				  				I have an upcoming paper with Marcos Mazari-Armida, <i>On the spectrum of limit models</i>, <a href="./publications/on-the-spectrum-of-limit-models.pdf">PDF</a> <a href="https://arxiv.org/abs/2503.11605">arXiv</a>.
+				  			</li>
+				  			<li>
+				  				I gave a talk about this paper at the <a href="https://www.colloquium.co/lc2025">2025 Logic Colloquium in Vienna</a>, <a href="./talks/ASL-Vienna-2025-extended-cut.pdf">Slides</a>.
+				  			</li>
+				  		</ul>
 			  			<p class="pt-5">
 			  				For more information on my work and about me, please have a look around!
 			  			</p>
