--- a/publications.html
+++ b/publications.html
@@ -31,6 +31,7 @@
 		  						<li><a href="./publications/on-the-spectrum-of-limit-models.pdf">PDF</a></li>
 		  						<li><a href="https://arxiv.org/abs/2503.11605">arXiv</a></li>
 		  					</ul>
+		  					Some proofs removed from the current version are present in <a href="./publications/on-the-spectrum-of-limit-models-v1.pdf">Version 1</a>.
 		  				</li>
 
 		  			</ul>
