On the speccy lim mod APAL publisher added

--- a/publications.html
+++ b/publications.html
@@ -23,18 +23,25 @@
 
 		  		<div class="container p-5">
 		  			<h1>Publications</h1>
-		  			<h3 class="px-3">Upcoming</h3>
+		  			<h3 class="px-3">Published work</h3>
 		  			<ul class="px-5">
 		  				<li>
-		  					<h5>Jeremy Beard and Marcos Mazari-Armida, <i>On the spectrum of limit models</i></h5>
+		  					<h5>Jeremy Beard and Marcos Mazari-Armida, <i>On the spectrum of limit models</i>, Annals of Pure and Applied Logic, Volume 176, Issue 10, 2025</h5>
 		  					<ul>
+		  						<li><a href="https://doi.org/10.1016/j.apal.2025.103647">Published version</a></li>
 		  						<li><a href="./publications/on-the-spectrum-of-limit-models.pdf">PDF</a></li>
 		  						<li><a href="https://arxiv.org/abs/2503.11605">arXiv</a></li>
 		  					</ul>
-		  					Some proofs removed from the current version are present in <a href="./publications/on-the-spectrum-of-limit-models-v1.pdf">Version 1</a>.
+		  					Some proofs removed from the published version are present in <a href="./publications/on-the-spectrum-of-limit-models-v1.pdf">Version 1</a>.
 		  				</li>
 
 		  			</ul>
+		  			<!--<h3 class="px-3">Upcoming</h3>
+		  			<ul class="px-5">
+		  				<li>
+		  					
+		  				</li>
+		  			</ul>-->
 		  		</div>
 	   		</div>
 		</div>
