--- a/home.html
+++ b/home.html
@@ -32,10 +32,13 @@
 			  			<h3 class="px-3">Recent news</h3>
 			  			<ul class="pt-2 px-5">
 				  			<li>
-				  				I have an upcoming paper with Marcos Mazari-Armida, <i>On the spectrum of limit models</i>, <a href="./publications/on-the-spectrum-of-limit-models.pdf">PDF</a> <a href="https://arxiv.org/abs/2503.11605">arXiv</a>.
+				  				I have an recently published paper with Marcos Mazari-Armida, <i>On the spectrum of limit models</i> (Annals of Pure and Applied Logic, Volume 176, Issue 10, 2025):<br>
+
+				  				<a href="https://doi.org/10.1016/j.apal.2025.103647">Published version</a> <a href="./publications/on-the-spectrum-of-limit-models.pdf">PDF</a> <a href="https://arxiv.org/abs/2503.11605">arXiv</a>.
 				  			</li>
 				  			<li>
-				  				I gave a talk about this paper at the <a href="https://www.colloquium.co/lc2025">2025 Logic Colloquium in Vienna</a>, <a href="./talks/ASL-Vienna-2025-extended-cut.pdf">Slides</a>.
+				  				I gave a talk about this paper at the <a href="https://www.colloquium.co/lc2025">2025 Logic Colloquium in Vienna</a>:<br>
+				  				<a href="./talks/ASL-Vienna-2025-extended-cut.pdf">Slides</a>.
 				  			</li>
 				  		</ul>
 			  			<p class="pt-5">
