--- a/talks.html
+++ b/talks.html
@@ -30,7 +30,7 @@
 		  				<div class="p-2">
 			  				<li>
 			  					<h4><i>On the spectrum of limit models</i>, 10th<sup>th</sup> July 2025</h4>
-			  					<p>Contributed talk for <a href="https://www.colloquium.co/lc2025">2025 Vienna Logic Colloquium</a>. A 15 minute overview of <a href="./publications/on-the-spectrum-of-limit-models.pdf">the paper of the same name</a> (joint work with Marcos Mazari-Armida).</p>
+			  					<p>Contributed talk for <a href="https://www.colloquium.co/lc2025">2025 Vienna Logic Colloquium</a>. A 15 minute overview of <a href="./publications/on-the-spectrum-of-limit-models.pdf">the paper of the same name</a> (joint work with <a href="https://sites.baylor.edu/marcos_mazari/">Marcos Mazari-Armida</a>).</p>
 			  					<ul>
 			  						<li><a href="./talks/ASL-Vienna-2025.pdf">Slides</a></li>
 			  						<li><a href="./talks/ASL-Vienna-2025-extended-cut.pdf">'Extended cut'</a></li>
@@ -40,7 +40,7 @@
 		  				<div class="p-2">
 			  				<li>
 			  					<h4><i>On the spectrum of limit models</i>, 5th<sup>th</sup> April 2025</h4>
-			  					<p>Part of the 2025 <a href="https://nemtd.wescreates.wesleyan.edu/index.html">Northeast Model Theory Day</a>. A brief 10 minute overview of <a href="./publications/on-the-spectrum-of-limit-models.pdf">the paper of the same name</a> (joint work with Marcos Mazari-Armida).</p>
+			  					<p>Part of the 2025 <a href="https://nemtd.wescreates.wesleyan.edu/index.html">Northeast Model Theory Day</a>. A brief 10 minute overview of <a href="./publications/on-the-spectrum-of-limit-models.pdf">the paper of the same name</a> (joint work with <a href="https://sites.baylor.edu/marcos_mazari/">Marcos Mazari-Armida</a>).</p>
 			  					<ul>
 			  						<li><a href="./talks/on_the_spectrum_of_limit_models_talk_NEMTD.pdf">Slides</a></li>
 			  					</ul>
@@ -49,7 +49,7 @@
 		  				<div class="p-2">
 			  				<li>
 			  					<h4><i>On the spectrum of limit models</i>, 25<sup>th</sup> March 2025</h4>
-			  					<p>A somewhat informal lecture in the CMU Graduate Set Theory and Model Theory Seminar, discussing results and sketching some proofs from <a href="./publications/on-the-spectrum-of-limit-models.pdf">the paper of the same name</a> (joint work with Marcos Mazari-Armida).</p>
+			  					<p>A somewhat informal lecture in the CMU Graduate Set Theory and Model Theory Seminar, discussing results and sketching some proofs from <a href="./publications/on-the-spectrum-of-limit-models.pdf">the paper of the same name</a> (joint work with <a href="https://sites.baylor.edu/marcos_mazari/">Marcos Mazari-Armida</a>).</p>
 			  					<ul>
 			  						<li><a href="./talks/gstmts-on-the-spectrum-of-limit-models.pdf">Handwritten notes</a></li>
 			  					</ul>
@@ -76,7 +76,7 @@
 		  				<div class="p-2">
 			  				<li>
 			  					<h4><i>On the spectrum of limit models</i>, 17<sup>th</sup> Oct - 14<sup>th</sup> Nov 2024</h4>
-			  					<p>4 lectures in the CMU Model Theory Seminar. Based on an early version of the paper with same name, joint work with Marcos Mazari-Armida (see publications).</p>
+			  					<p>4 lectures in the CMU Model Theory Seminar. Based on an early version of the paper with same name, joint work with <a href="https://sites.baylor.edu/marcos_mazari/">Marcos Mazari-Armida</a> (see publications).</p>
 			  					<ul>
 			  						<li><a href="./talks/on-the-spectrum-of-limit-models-cmu-seminar-notes.pdf">Handwritten notes</a></li>
 			  					</ul>
