--- a/publications.html
+++ b/publications.html
@@ -26,7 +26,7 @@
 		  			<h3 class="px-3">Published work</h3>
 		  			<ul class="px-5">
 		  				<li>
-		  					<h5>Jeremy Beard and Marcos Mazari-Armida, <i>On the spectrum of limit models</i>, Annals of Pure and Applied Logic, Volume 176, Issue 10, 2025</h5>
+		  					<h5>Join work with <a href="https://sites.baylor.edu/marcos_mazari/">Marcos Mazari-Armida</a>, <i>On the spectrum of limit models</i>, Annals of Pure and Applied Logic, Volume 176, Issue 10, 2025</h5>
 		  					<ul>
 		  						<li><a href="https://doi.org/10.1016/j.apal.2025.103647">Published version</a></li>
 		  						<li><a href="./publications/on-the-spectrum-of-limit-models.pdf">PDF</a></li>
@@ -36,12 +36,16 @@
 		  				</li>
 
 		  			</ul>
-		  			<!--<h3 class="px-3">Upcoming</h3>
+		  			<h3 class="px-3">Upcoming</h3>
 		  			<ul class="px-5">
 		  				<li>
-		  					
+		  					<h5><i>The spectrum of limit models in a first order setting</i></h5>
+		  					<ul>
+		  						<li><a href="./publications/the-spectrum-of-limit-models-in-a-first-order-setting.pdf">PDF</a></li>
+		  						<li><a href="https://arxiv.org/abs/2510.03459">arXiv</a></li>
+		  					</ul>
 		  				</li>
-		  			</ul>-->
+		  			</ul>
 		  		</div>
 	   		</div>
 		</div>
