--- a/teaching.html
+++ b/teaching.html
@@ -27,6 +27,10 @@
 					<p class="container px-5">During my time at Carnegie Mellon, I was the 2024 recipient of the Mathematical Sciences department's graduate <a href="https://www.cmu.edu/math/grad/phd/graduate-student-prizes.html">Outstanding Teaching Prize</a>. I have been a teaching assistant for the following courses:</p>
 		  			<ul class="px-5">
 		  				<li>
+			  				<b>Fall 2025</b> 
+			  				<p>TA for <i>Introduction to Mathematical Concepts</i> (21-108)</p>
+			  			</li>
+		  				<li>
 			  				<b>Spring 2025</b> 
 			  				<p>Lead TA for <i>Calculus in Three Dimensions</i> (21-259)</p>
 			  			</li>
@@ -63,6 +67,7 @@
 			  		<p  class="px-5">Through the Western PA branch of ARML (based at CMU), I've also done some voluntary teaching for middle and high school students. These were 'one-off' talks letting students dip their toes into some deep areas of mathematics.</p>
 			  		<ul class="px-5">
 			  			<li>Intro to model theory (<a href="./teaching/arml-model-theory-lecture.pdf">handout PDF</a>)</li>
+			  			<li>Intro to group theory (<a href="./teaching/arml-group-theory-lecture.pdf">handout PDF</a>)</li>
 			  			<li>Vector spaces and matrices</li>
 			  		</ul>	
 		  		</div>
