added favicon, v3 of paper, cleaned up publication page, added purple to background, and so on.

--- a/cv.html
+++ b/cv.html
@@ -7,6 +7,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>CV - Jeremy Beard's Webpage</title>
+	<link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
 <body onload="add_navbar_and_photo_column()">
@@ -31,7 +32,7 @@
 			  				<h4>Carnegie Mellon University</h4>
 			  				<ul>
 			  					<li>
-			  						<b>PhD in Mathematics (2021 - present)</b> Working in Abstract Elementary Classes, a subfield of Model Theory within logic, under Professor Rami Grossberg. Passed qualifying exams in 2023.
+			  						<b>PhD in Mathematics (2021 - present)</b> Working in Abstract Elementary Classes, a subfield of Model Theory within logic, under Professor Rami Grossberg. Passed qualifying exams in 2023. See my work in <a href="./publications.html">Publications</a>.
 			  					</li>
 			  					<li>
 			  						<b>Master of Science in Mathematical Sciences (2021 - 2024)</b> Attained through course work towards the PhD.
