--- a/publications.html
+++ b/publications.html
@@ -7,6 +7,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Publications - Jeremy Beard's Webpage</title>
+	<link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
 <body onload="add_navbar_and_photo_column()">
@@ -26,24 +27,20 @@
 		  			<h3 class="px-3">Published work</h3>
 		  			<ul class="px-5">
 		  				<li>
-		  					<h5>Join work with <a href="https://sites.baylor.edu/marcos_mazari/">Marcos Mazari-Armida</a>, <i>On the spectrum of limit models</i>, Annals of Pure and Applied Logic, Volume 176, Issue 10, 2025</h5>
-		  					<ul>
-		  						<li><a href="https://doi.org/10.1016/j.apal.2025.103647">Published version</a></li>
-		  						<li><a href="./publications/on-the-spectrum-of-limit-models.pdf">PDF</a></li>
-		  						<li><a href="https://arxiv.org/abs/2503.11605">arXiv</a></li>
-		  					</ul>
-		  					Some proofs removed from the published version are present in <a href="./publications/on-the-spectrum-of-limit-models-v1.pdf">Version 1</a>.
+		  					<h5><i>On the spectrum of limit models</i>, joint work with <a href="https://sites.baylor.edu/marcos_mazari/">Marcos Mazari-Armida</a></h5>
+		  					<p><i>Annals of Pure and Applied Logic, Volume 176, Issue 10, 2025.</i></p>
+		  					<p><a href="https://doi.org/10.1016/j.apal.2025.103647">Published version</a>, <a href="./publications/on-the-spectrum-of-limit-models.pdf">PDF</a>, <a href="https://arxiv.org/abs/2503.11605">arXiv</a></p>
+		  					
+		  					<p>Some proofs removed from the published version are present in <a href="./publications/on-the-spectrum-of-limit-models-v1.pdf">Version 1</a>.</p>
 		  				</li>
 
 		  			</ul>
-		  			<h3 class="px-3">Upcoming</h3>
+		  			<h3 class="px-3">Preprints</h3>
 		  			<ul class="px-5">
 		  				<li>
 		  					<h5><i>The spectrum of limit models in a first order setting</i></h5>
-		  					<ul>
-		  						<li><a href="./publications/the-spectrum-of-limit-models-in-a-first-order-setting.pdf">PDF</a></li>
-		  						<li><a href="https://arxiv.org/abs/2510.03459">arXiv</a></li>
-		  					</ul>
+		  					<p><a href="./publications/the-spectrum-of-limit-models-in-a-first-order-setting.pdf">PDF</a>, <a href="https://arxiv.org/abs/2510.03459">arXiv</a></p>
+		  					
 		  				</li>
 		  			</ul>
 		  		</div>
