--- a/teaching.html
+++ b/teaching.html
@@ -7,6 +7,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Teaching - Jeremy Beard's Webpage</title>
+	<link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
 <body onload="add_navbar_and_photo_column()">
@@ -28,7 +29,10 @@
 		  			<ul class="px-5">
 		  				<li>
 			  				<b>Fall 2025</b> 
-			  				<p>TA for <i>Introduction to Mathematical Concepts</i> (21-108)</p>
+			  				<ul>
+			  					<li>Mini 1: TA for <i>Introduction to Mathematical Concepts</i> (21-108)</li>
+			  					<li>Mini 2: Lead TA for <i>Precalculus</i> (21-090)</li>
+			  				</ul>
 			  			</li>
 		  				<li>
 			  				<b>Spring 2025</b> 
