--- a/home.html
+++ b/home.html
@@ -7,6 +7,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Home - Jeremy Beard's Webpage</title>
+	<link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
 <body onload="add_navbar_and_photo_column()">
