Added DRP bits, and rejigged the formatting to be a little more uniform.

--- a/cv.html
+++ b/cv.html
@@ -26,8 +26,8 @@
 
 		  		<div class="p-5">
 		  			<h1>CV</h1>
-					<h2 class="px-3">Education</h2>
-		  			<ul class="container px-5">
+					<h3>Education</h3>
+		  			<ul class="container px-4">
 						<li>
 			  				<h4>Carnegie Mellon University</h4>
 			  				<ul>
@@ -40,6 +40,9 @@
 			  					<li>
 			  						Awarded the 2024 graduate <a href="https://www.cmu.edu/math/grad/phd/graduate-student-prizes.html">Outstanding Teaching Prize</a> for TA work through the PhD. See <a href="./teaching.html">Teaching</a> for more on my teaching at CMU.
 			  					</li>
+			  					<li>
+			  						Working as the student representative on the graduate program committee (GPC) in the 2025-2026 academic year.
+			  					</li>
 			  				</ul>
 						</li>
 			  			<li>
@@ -49,8 +52,8 @@
 			  				</p>
 		  				</li>
 					</ul>
-			  		<h2 class="px-3">Work</h2>
-		  			<ul class="container px-5">
+			  		<h3>Work</h3>
+		  			<ul class="container px-4">
 						<li>
 			  				<h4>e2E SATCOM</h4>
 		  					<p>
