--- a/home.html
+++ b/home.html
@@ -26,29 +26,38 @@
 
 		  		<div class="p-5">
 		  			<h1>Home</h1>
-			  			<h3 class="px-3">About me</h3>
-			  			<p class="pt-2 px-5">
+			  			<h3>About me</h3>
+			  			<p class="pt-2 px-4">
 			  				I am a fifth year Mathematics PhD candidate at Carnegie Mellon University, advised by Rami Grossberg. My research is in logic, specifically model theory, with a focus on abstract elementary classes.
 			  			</p>
-			  			<h3 class="px-3">Recent news</h3>
+			  			<h3>Recent news</h3>
 			  			<ul class="pt-2 px-5">
 				  			<li>
-				  				I have an recently published paper with <a href="https://sites.baylor.edu/marcos_mazari/">Marcos Mazari-Armida</a>, <i>On the spectrum of limit models</i> (Annals of Pure and Applied Logic, Volume 176, Issue 10, 2025):<br>
+				  				I have an recently published paper with <a href="https://sites.baylor.edu/marcos_mazari/">Marcos Mazari-Armida</a>, <i><b>On the spectrum of limit models</b></i> (Annals of Pure and Applied Logic, Volume 176, Issue 10, 2025). We prove that in a nice enough AEC with a well behaved independence relation, long limit models are isomorphic, and short limit models are distinct:
+				  				<br>
 
-				  				<a href="https://doi.org/10.1016/j.apal.2025.103647">Published version</a> <a href="./publications/on-the-spectrum-of-limit-models.pdf">PDF</a> <a href="https://arxiv.org/abs/2503.11605">arXiv</a>.
+				  				<p class="px-2"><a href="https://doi.org/10.1016/j.apal.2025.103647">Published version</a> <a href="./publications/on-the-spectrum-of-limit-models.pdf">PDF</a> <a href="https://arxiv.org/abs/2503.11605">arXiv</a>.</p>
 				  			</li>
 				  			<li>
 				  				I gave a talk about this paper at the <a href="https://www.colloquium.co/lc2025">2025 Logic Colloquium in Vienna</a>:<br>
-				  				<a href="./talks/ASL-Vienna-2025-extended-cut.pdf">Slides</a>.
+				  				<p class="px-2"><a href="./talks/ASL-Vienna-2025-extended-cut.pdf">Slides</a>.</p>
 				  			</li>
 				  			<li>
-				  				I have an upcoming paper, <i>The spectrum of limit models in a first order setting</i>:
+				  				I have an upcoming paper, <i><b>The spectrum of limit models in a first order setting</b></i>, which greatly simplifies the proof of the main result of <i>On the spectrum of limit models</i> when we restrict to first order model theory:
 				  				<br>
 
-				  				<a href="./publications/the-spectrum-of-limit-models-in-a-first-order-setting.pdf">PDF</a> <a href="https://arxiv.org/abs/2510.03459">arXiv</a>.
+				  				<p class="px-2"><a href="./publications/the-spectrum-of-limit-models-in-a-first-order-setting.pdf">PDF</a> <a href="https://arxiv.org/abs/2510.03459">arXiv</a>.</p>
 				  			</li>
+
+		  					<li>
+		  						And another upcoming paper, <i><b>Long limit models are isomorphic assuming a splitting-like relation</b></i>, which generalises (to my knowledge) all positive isomorphism results of limit models in AECs with amalgamation, including the main result of Chapter 3 of <i>On the spectrum of limit models</i>:
+				  				<br>
+
+		  						<p class="px-2"><a href="./publications/long-limit-models-are-isomorphic-assuming-a-splitting-like-relation.pdf">PDF</a>, <a href="https://arxiv.org/abs/2511.18665">arXiv</a>.</p>
+		  					</li>
+
 				  		</ul>
-			  			<p class="pt-5">
+			  			<p>
 			  				For more information on my work and about me, please have a look around!
 			  			</p>
 		  		</div>
