--- a/teaching.html
+++ b/teaching.html
@@ -24,8 +24,13 @@
 
 		  		<div class="container p-5">
 		  			<h1>Teaching</h1>
-		  			<h3 class="px-3">Carnegie Mellon TA work</h3>
-					<p class="container px-5">During my time at Carnegie Mellon, I was the 2024 recipient of the Mathematical Sciences department's graduate <a href="https://www.cmu.edu/math/grad/phd/graduate-student-prizes.html">Outstanding Teaching Prize</a>. I have been a teaching assistant for the following courses:</p>
+		  			<h3>Carnegie Mellon</h3>
+
+					<p class="container px-3">During my time at Carnegie Mellon, I was the 2024 recipient of the Mathematical Sciences department's graduate <b><a href="https://www.cmu.edu/math/grad/phd/graduate-student-prizes.html">Outstanding Teaching Prize</a></b>.</p>
+					<p class="container px-3">I am also a cofounder and coorgainiser of the <b><a href="https://programs.mcs.cmu.edu/drp/">CMU-UPitt Directed Reading Program (DRP)</a></b>, and have served as a mentor; see below.</p>
+
+			  		<h4>Teaching Assistant work</h4>
+			  		<p class="container px-3">I have been a teaching assistant for the following courses:</p>
 		  			<ul class="px-5">
 		  				<li>
 			  				<b>Fall 2025</b> 
@@ -67,8 +72,14 @@
 			  				<p>TA for <i>Calculus in Three Dimensions</i> (21-259)</p>
 			  			</li>
 			  		</ul>
-			  		<h3 class="px-3">Miscellaneous</h3>
-			  		<p  class="px-5">Through the Western PA branch of ARML (based at CMU), I've also done some voluntary teaching for middle and high school students. These were 'one-off' talks letting students dip their toes into some deep areas of mathematics.</p>
+
+					<h4>CMU-UPitt Directed Reading Program</h4>
+			  		<p  class="px-3">I am a cofounder and coorgainiser of the <a href="https://programs.mcs.cmu.edu/drp/">CMU-UPitt Directed Reading Program (DRP)</a>. Initiated in August 2025, the program is a joint effort of graduate students across both Carnegie Mellon and University of Pittsburgh's mathematics departments, where graduate mentors and undergraduate mentees across both institutions are paired for a semester long reading course. Our aim is to give participants the chance to explore new areas of maths while developing their ability to communicate mathematics, and to encourage interaction between students across both campuses.</p>
+
+			  		<h3>Miscellaneous</h3>
+
+			  		<h4>ARML</h4>
+			  		<p  class="px-3">Through the Western PA branch of ARML (based at CMU), I've also done some voluntary teaching for middle and high school students. These were 'one-off' talks letting these students dip their toes into some deep areas of mathematics.</p>
 			  		<ul class="px-5">
 			  			<li>Intro to model theory (<a href="./teaching/arml-model-theory-lecture.pdf">handout PDF</a>)</li>
 			  			<li>Intro to group theory (<a href="./teaching/arml-group-theory-lecture.pdf">handout PDF</a>)</li>
